5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1712_2505.log
== TEST (2019-05-15 11:33:19) 
-- CODE:
from math import 

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- ERROR:
File "XXXX", line 1
    from math import 
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:33:52) 
-- CODE:
from math import factorial 

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:35:52) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 11:36:20) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- EXECUTION TIME:
0.186886
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
3.2613603682
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-3.2613496875
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.9665536866
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:36:27) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 11:36:39) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- EXECUTION TIME:
0.139898
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
3.2613603682
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-3.2613496875
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.9665536866
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:36:44) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:37:09) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:37:32) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:38:00) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:38:14) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:38:31) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:38:52) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:39:16) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:39:43) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:11:13) 
-- CODE:
from math import*

x = float(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = float(input())
ValueError: could not convert string to float: 'pi/2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:11:39) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:12:01) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:12:30) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:12:58) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:13:21) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:13:34) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:13:48) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:14:01) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:14:14) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:14:30) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i<k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:30:53) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:31:20) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:31:34) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:31:49) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:32:11) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:32:32) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:34:38) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:34:39) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:34:50) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:35:02) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:35:19) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:36:11) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 12:36:27) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- EXECUTION TIME:
0.15172
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
3.2613603682
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-3.2613496875
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.9665536866
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 12:36:33) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- EXECUTION TIME:
0.115775
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
3.2613603682
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-3.2613496875
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.9665536866
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:36:37) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos"))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 12:37:02) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- EXECUTION TIME:
0.132367
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
3.2613603682
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-3.2613496875
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.9665536866
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:37:14) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.2613603682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 12:37:24) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

i = 0
soma = 0

while (i < k):
	conta = x**((2*1)+1) / factorial(2*i+1)
	x = -1 * x 
	soma = soma + conta
	i = i + 1
print(round(soma, 10))
-- EXECUTION TIME:
0.143277
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
3.2613603682
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-3.2613496875
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.9665536866
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
